--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "version": "0.0.1",
     "private": true,
     "devDependencies": {
-	"shadow-cljs": "2.16.8"
+        "shadow-cljs": "2.16.8"
+    },
+    "dependencies": {
+        "create-react-class": "15.7.0",
+        "react": "16.14.0",
+        "react-dom": "16.14.0",
+        "react-test-renderer": "16.14.0"
     }
 }
